--- a/src/views/admin.handlebars
+++ b/src/views/admin.handlebars
@@ -1,25 +1,31 @@
 
 <ul class="d-flex row m-1 gap-2">
     {{#each products}}
-        <div class="card" id="{{this.id}}" style="width: 18rem;">
-            <img src="..." class="card-img-top" alt="...">
+        <div class="card" id="{{this._id}}" style="width: 18rem;">
+            <img src="{{this.thumbnail}}" class="card-img-top" alt="{{this.title}}">
             <div class="card-body">
+                <p class="card-text">Name of product</p>
                 <p class="card-text">{{this.title}}</p>
+                <p class="card-text">Description:</p>
                 <p class="card-text">{{this.description}}</p>
+                <p class="card-text">Price:</p>
                 <p class="card-text">${{this.price}}</p>
-                <p class="card-text">Stock: {{this.stock}}</p>
+                <p class="card-text">Stock:</p>
+                <p class="card-text">{{this.stock}}</p>
+                <p class="card-text">Code:</p>
                 <p class="card-text">{{this.code}}</p>
+                <p class="card-text">Category:</p>
                 <p class="card-text">{{this.category}}</p>
             </div>
             <form action="delete/{{this.id}}" method="post">
                 <button type="submit" class="btn btn-primary m-2" >Delete</button>
             </form>
-            <button type="button" class="btn btn-primary m-2" data-bs-toggle="modal" data-bs-target="#staticBackdrop-{{this.id}}">
+            <button type="button" class="btn btn-primary m-2" data-bs-toggle="modal" data-bs-target="#staticBackdrop-{{this._id}}">
             Edit
             </button>
 
             <!-- Modal -->
-            <div class="modal fade" id="staticBackdrop-{{this.id}}" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+            <div class="modal fade" id="staticBackdrop-{{this._id}}" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
             <div class="modal-dialog">
                 <div class="modal-content">
                     <div class="modal-header">
@@ -27,13 +33,13 @@
                         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                     </div>
                     <div class="modal-body">
-                        <form action="edit/{{this.id}} "method="post">
+                        <form action="edit/{{this._id}} "method="post">
                             <label for="title" class="form-label">Name of product</label>
-                            <input type="text" name="title" id="title" class="form-control" value="{{this.title}}">
+                            <input type="text" name="title" id="title" class="form-control" value="{{this.title}}" required>
                             <label for="description">Description</label>
                             <textarea class="form-control" id="description" style="height: 100px" value="{{this.description}}"></textarea>
                             <label for="price" class="form-label">Price of product</label>
-                            <input type="number" name="price" id="price" class="form-control" value="{{this.price}}">
+                            <input type="number" name="price" id="price" class="form-control" value="{{this.price}}" required>
                             <label for="stock" class="form-label">Stock of product</label>
                             <input type="number" name="stock" id="stock" class="form-control" value="{{this.stock}}">
                             <label for="code" class="form-label">Code of product</label>
@@ -75,7 +81,7 @@
                         <label for="description">Description</label>
                         <textarea class="form-control" id="description" style="height: 100px"></textarea>
                         <label for="price" class="form-label">Price of product</label>
-                        <input type="number" name="price" id="price" class="form-control" >
+                        <input type="number" name="price" id="price" class="form-control" required>
                         <label for="stock" class="form-label">Stock of product</label>
                         <input type="number" name="stock" id="stock" class="form-control" >
                         <label for="code" class="form-label">Code of product</label>
