--- a/src/views/layouts/main.handlebars
+++ b/src/views/layouts/main.handlebars
@@ -10,7 +10,7 @@
     <header>
         <nav class="navbar navbar-expand-lg bg-dark ">
             <div class="container-fluid">
-                <a class="navbar-brand text-white" href="http://localhost:8080/">Inicio</a>
+                <a class="navbar-brand text-white" href="/">Inicio</a>
                 <button class="navbar-toggler text-white" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
                 </button>
@@ -22,15 +22,15 @@
                 </ul>
                 
 
-                    {{#if status}}
+                  
                         <li class="nav-item">
-                            <a class="nav-link active text-white" aria-current="page" href="http://localhost:8080/products/admin">Management</a>
-                            <a href="http://localhost:8080/products/profile/{{this.id}}"></a>
+                            <a class="nav-link active text-white" aria-current="page" href="/products/admin">Management</a>
+                            <a href="/products/profile/{{this._id}}"></a>
                         </li>
-                    {{else}}
-                        <a class="nav-link m-2 active text-white" href="http://localhost:8080/users/register">Register</a>
-                        <a class="nav-link m-2 active text-white" href="http://localhost:8080/users/login">Login up</a>
-                    {{/if}}
+        
+                        <a class="nav-link m-2 active text-white" href="/users/register">Register</a>
+                        <a class="nav-link m-2 active text-white" href="/users/login">Login up</a>
+                   
                 </div>
             </div>
         </nav>
@@ -39,7 +39,7 @@
     <footer></footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <script>
-        const status = window.localStorage.getItem("status")
+            window.localStorage.getItem("status")
     </script>
 </body>
 </html>
