--- a/src/views/user.handlebars
+++ b/src/views/user.handlebars
@@ -1,6 +1,6 @@
 {{#user}}
         <div class="card" style="width: 18rem;">
-            <img src="..." class="card-img-top" alt="...">
+            <img src="{{this.photo}}" class="card-img-top" alt="{{this.title}}">
             <div class="card-body">
                 <p class="card-text">{{this.email}}</p>
                 <p class="card-text">{{this.title}}</p>
