--- a/src/views/register.handlebars
+++ b/src/views/register.handlebars
@@ -2,12 +2,16 @@
   <div class="card-body ">
     <h3>Welcome</h3>
     <form class="d-flex flex-column m-4 gap-2" action="register" method="post">
+        <label for="first_name">First Name:</label>
+        <input type="text" id="first_name" name="first_name" required>
+        <label for="last_name">Last-name:</label>
+        <input type="text" id="last_name" name="last_name" required>
+        <label for="age">Age:</label>
+        <input type="number" id="age" name="age" required>
         <label for="email">Email:</label>
         <input type="email" id="email" name="email" required>
         <label for="password">Password:</label>
         <input type="password" id="password" name="password" required>
-        <label for="name">Full name:</label>
-        <input type="text" id="name" name="name" required>
         <button type="submit" class="btn btn-primary">Register</button>
     </form>
   </div>
